Printing: Fix DCHECK

https://crrev.com/c/804178 added one too many DCHECKs, and it fails on
Windows.

Bug: 793850
Change-Id: I1e61cd3253dce2dadb84f40b4c873ac2978219e7
Reviewed-on: https://chromium-review.googlesource.com/818494
Commit-Queue: Rebekah Potter <rbpotter@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523224}
Former-commit-id: 0de489249045b999b89dadb1e04713261eca20ab